fixed z-index

--- a/src/components/Overlay/overlay.module.scss
+++ b/src/components/Overlay/overlay.module.scss
@@ -1,6 +1,6 @@
 .overlay {
   position: fixed;
-  z-index: 1;
+  // z-index: 1;
 
   width: 98%;
   height: 98%;
